ajuste do main na tela

--- a/www/index.html
+++ b/www/index.html
@@ -47,55 +47,65 @@
 
 
   <!-- Home Page -->
-<div data-role="page" id="homePage">
-  
-  <div role="main" class="ui-content">
-    <h2>Bem-vindo! <span id="usuario-home"></span></h2>
-    <!-- Seção com 5 cards -->
-    <div class="card-container">
-      <!-- Card 1 -->
-      <a href="#" class="card-link">
-        <div class="card">
-          <img src="./img/user-pen_10416185.png" alt="Imagem 1" class="card-image">
-          <p class="card-text">Atualizar cadastro</p>
-        </div>
-      </a>
+  <div data-role="page" id="homePage">
 
-      <!-- Card 2 -->
-      <a href="#" class="card-link">
-        <div class="card">
-          <img src="./img/calendar_2886665.png" alt="Imagem 2" class="card-image">
-          <p class="card-text">Boletim</p>
-        </div>
-      </a>
+    <div role="main" class="ui-content">
+      
+      <h2>Bem-vindo! <span id="usuario-home"></span></h2>
 
-      <!-- Card 3 -->
-      <a href="#" class="card-link">
-        <div class="card">
-          <img src="./img/scroll_8510686.png" alt="Imagem 3" class="card-image">
-          <p class="card-text">Histórico</p>
-        </div>
-      </a>
+      <!-- Seção com 5 cards -->
+      <div class="card-container">
+        <!-- Card 1 -->
+        <a href="#" class="card-link">
+          <div class="card">
+            <img src="./img/user-pen_10416185.png" alt="Imagem 1" class="card-image">
+            <p class="card-text">Atualizar cadastro</p>
+          </div>
+        </a>
 
-      <!-- Card 4 -->
-      <a href="#" class="card-link">
-        <div class="card">
-          <img src="./img/padlock_535194.png" alt="Imagem 4" class="card-image">
-          <p class="card-text">Trancar matrícula</p>
-        </div>
-      </a>
+        <!-- Card 2 -->
+        <a href="#" class="card-link">
+          <div class="card">
+            <img src="./img/calendar_2886665.png" alt="Imagem 2" class="card-image">
+            <p class="card-text">Boletim</p>
+          </div>
+        </a>
 
-      <!-- Card 5 -->
-      <a href="#" class="card-link">
-        <div class="card">
-          <img src="./img/choice_9406166.png" alt="Imagem 5" class="card-image">
-          <p class="card-text">Matricula</p>
-        </div>
-      </a>
+        <!-- Card 3 -->
+        <a href="#" class="card-link">
+          <div class="card">
+            <img src="./img/scroll_8510686.png" alt="Imagem 3" class="card-image">
+            <p class="card-text">Histórico</p>
+          </div>
+        </a>
+
+        <!-- Card 4 -->
+        <a href="#" class="card-link">
+          <div class="card">
+            <img src="./img/padlock_535194.png" alt="Imagem 4" class="card-image">
+            <p class="card-text">Trancar matrícula</p>
+          </div>
+        </a>
+
+        <!-- Card 5 -->
+        <a href="#" class="card-link">
+          <div class="card">
+            <img src="./img/choice_9406166.png" alt="Imagem 5" class="card-image">
+            <p class="card-text">Matricula</p>
+          </div>
+        </a>
+
+        <!-- Card 6 -->
+        <a href="#" class="card-link">
+          <div class="card sair">
+            <img src="./img/log-out_1330162.png" alt="Imagem 6" class="card-image">
+            <p class="card-text">Sair</p>
+          </div>
+        </a>
+      </div>
+      <!-- Fim da seção com 5 cards -->
     </div>
-    <!-- Fim da seção com 5 cards -->
   </div>
-</div>
 
 
 
