ajuste da distribuição dos card

--- a/www/index.html
+++ b/www/index.html
@@ -50,15 +50,16 @@
   <div data-role="page" id="homePage">
 
     <div role="main" class="ui-content">
-      
+
       <h2>Bem-vindo! <span id="usuario-home"></span></h2>
 
-      <!-- Seção com 5 cards -->
+      <!-- Seção com 6 cards -->
       <div class="card-container">
+
         <!-- Card 1 -->
         <a href="#" class="card-link">
           <div class="card">
-            <img src="./img/user-pen_10416185.png" alt="Imagem 1" class="card-image">
+            <img src="./img/user-pen_10416185.png" alt="Ícone de uma pesssoa com um lápis. Significa que alterar as informações de cadastro." class="card-image">
             <p class="card-text">Atualizar cadastro</p>
           </div>
         </a>
@@ -66,7 +67,7 @@
         <!-- Card 2 -->
         <a href="#" class="card-link">
           <div class="card">
-            <img src="./img/calendar_2886665.png" alt="Imagem 2" class="card-image">
+            <img src="./img/calendar_2886665.png" alt="Ícone de calendário." class="card-image">
             <p class="card-text">Boletim</p>
           </div>
         </a>
@@ -74,7 +75,7 @@
         <!-- Card 3 -->
         <a href="#" class="card-link">
           <div class="card">
-            <img src="./img/scroll_8510686.png" alt="Imagem 3" class="card-image">
+            <img src="./img/scroll_8510686.png" alt="Ícone de pergaminho." class="card-image">
             <p class="card-text">Histórico</p>
           </div>
         </a>
@@ -82,7 +83,7 @@
         <!-- Card 4 -->
         <a href="#" class="card-link">
           <div class="card">
-            <img src="./img/padlock_535194.png" alt="Imagem 4" class="card-image">
+            <img src="./img/padlock_535194.png" alt="Imagem de um cadeado abrindo." class="card-image">
             <p class="card-text">Trancar matrícula</p>
           </div>
         </a>
@@ -103,7 +104,7 @@
           </div>
         </a>
       </div>
-      <!-- Fim da seção com 5 cards -->
+      <!-- Fim da seção com 6 cards -->
     </div>
   </div>
 
