--- a/www/index.html
+++ b/www/index.html
@@ -20,16 +20,19 @@
   <!-- spinner de carregamento -->
   <div id="loadingPopup" class="ui-loader ui-corner-all ui-body-a ui-loader-default">
     <span class="ui-icon-loading"></span>
-    <h2>Enviando...</h2>
+    <h2></h2>
   </div>
 
   <!-- Popup -->
-  <div data-role="popup" id="customPopup" data-overlay-theme="b" data-theme="b" data-dismissible="false">
+  <div data-role="popup" id="customPopup" data-overlay-theme="b" data-theme="b" data-dismissible="true">
     <p id="popupMessage" class="popup-text"></p>
-    <a href="#" data-rel="back"
-      class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-check ui-btn-icon-left ui-btn-b popup-btn"
-      onclick="$(this).closest('div[data-role=popup]').popup('close');">OK</a>
+    <div class="popup-btn-container">
+      <a href="#" data-rel="back"
+        class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-check ui-btn-icon-left ui-btn-b popup-btn"
+        onclick="$(this).closest('div[data-role=popup]').popup('close');">OK</a>
+    </div>
   </div>
+
 
   <!-- Login Page -->
   <div data-role="page" id="loginPage">
