adição da visualização da senha

--- a/www/index.html
+++ b/www/index.html
@@ -48,18 +48,20 @@
         <input type="tel" name="username" id="username" pattern="[0-9]*" required>
 
         <label for="password">Senha:</label>
-        <input type="password" name="password" id="password" required>
+        <div class="password-container">
+          <input type="password" name="password" id="password" required>
+          <img src="./img/eye.png" id="togglePassword" class="toggle-password" alt="Mostrar Senha">
+        </div>
 
         <button type="submit" data-theme="b">Acessar</button>
       </form>
 
-
     </div>
-
     <!-- fim do main -->
 
   </div>
   <!-- fim da página de login -->
+
 
 
   <!-- Home Page -->
