remoção do filtro da tabela de boletim e historico

--- a/www/index.html
+++ b/www/index.html
@@ -218,7 +218,7 @@
         </div>
 
         <!-- Tabela para exibir o histórico escolar -->
-        <table id="historicoTable" data-role="table" class="ui-responsive table-stripe" data-mode="columntoggle">
+        <table id="historicoTable" data-role="table" class="ui-responsive table-stripe">
           <thead>
             <tr>
               <th>Disciplina</th>
@@ -255,7 +255,7 @@
       </div>
 
       <!-- Tabela para exibir o boletim -->
-      <table id="boletimTable" data-role="table" class="ui-responsive table-stripe" data-mode="columntoggle">
+      <table id="boletimTable" data-role="table" class="ui-responsive table-stripe">
         <thead>
           <tr>
             <th>Disciplina</th>
